# siphon

./: .env.example  .gitignore  README.md  dependency_report.md  pyproject.toml
.github/workflows/: scheduled-scrape.yml
src/siphon/: __main__.py  cli.py  config.py
src/siphon/auth/: cookie_provider.py  healthcheck.py
src/siphon/db/: connection.py  migrations.py  schema.sql  tweet_repository.py
src/siphon/extract/: __init__.py  graphql_engine.py
src/siphon/extract/operations/: __init__.py  following.py  home_timeline.py
src/siphon/jobs/: scrape_timeline.py
src/siphon/normalize/: text_normalizer.py
src/siphon/parse/: article_parser.py  models.py  parse_stats.py  timeline_parser.py
src/siphon/routing/: proxy_provider.py
src/siphon/security/: log_redactor.py
src/siphon/stealth/: header_fingerprint.py  transaction_id.py
tests/: test_cookie_provider.py  test_parser_smoke.py  test_schema_contract.py  test_scrape_operations.py
