[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "siphon"
version = "0.1.0"
description = "Twitter/X ingestion engine — scrape, parse, store"
requires-python = ">=3.10"
dependencies = [
    "curl_cffi>=0.15",
    "xclienttransaction>=1.0.1",
    "pydantic>=2.10",
    "pydantic-settings>=2.0",
    "click>=8.0",
    "psycopg2-binary>=2.9",
    "httpx>=0.28",
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.8"]

[project.scripts]
siphon = "siphon.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/siphon"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
